compiler/testData/diagnostics/tests/declarationChecks/LocalVariableWithNoTypeInformation.kt
fun test() {
    val <!VARIABLE_WITH_NO_TYPE_NO_INITIALIZER, UNUSED_VARIABLE!>a<!>
}
